1.4.dev
-----------------

- fix issue33 - commentchars are ignored in key-value settings allowing
  for specifying commands like: python -c "import sys ; print sys"
  which would formerly raise irritating errors because the ";"
  was considered a comment
- tweak and improve reporting
- refactor reporting and virtualenv manipulation 
  to be more accessible from 3rd party tools
- support value substitution from other sections
  with the {[section]key} syntax
- fix issue29 - correctly point to pytest explanation
  for importing modules fully qualified
- fix issue32 - use --system-site-packages and don't pass --no-site-packages
- add python3.3 to the default env list, so early adopters can test

1.3
-----------------

- fix: allow to specify wildcard filesystem paths when 
  specifying dependencies such that tox searches for 
  the highest version

- fix issue issue21: clear PIP_REQUIRES_VIRTUALENV which avoids
  pip installing to the wrong environment, thanks to bb's streeter

- make the install step honour a testenv's setenv setting
  (thanks Ralf Schmitt)


1.2
-----------------

- remove the virtualenv.py that was distributed with tox and depend
  on >=virtualenv-1.6.4 (possible now since the latter fixes a few bugs
  that the inlining tried to work around)
- fix issue10: work around UnicodeDecodeError when invoking pip (thanks
  Marc Abramowitz)
- fix a problem with parsing {posargs} in tox commands (spotted by goodwill)
- fix the warning check for commands to be installed in testenvironment
  (thanks Michael Foord for reporting)

1.1
-----------------

- fix issue5 - don't require argparse for python versions that have it
- fix issue6 - recreate virtualenv if installing dependencies failed
- fix issue3 - fix example on frontpage
- fix issue2 - warn if a test command does not come from the test
  environment
- fixed/enhanced: except for initial install always call "-U
  --no-deps" for installing the sdist package to ensure that a package